--- a/quiz-app/src/App.css
+++ b/quiz-app/src/App.css
@@ -2,19 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #0f679d;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +13,22 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.quiz-question {
+  margin: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.quiz-question h2 {
+  font-size: 1.5em;
+}
+
+.quiz-question ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.quiz-question li {
+  background: #0f4490;
+  margin: 5px 0;
+  padding: 10px;
+  border-radius: 5px;
 }
